# Conways_Game_of_Life_FLTK

./: CMakeLists.txt  README.md  lifeGame.cpp  lifeGame.h  lifeGameFLTK.cpp  lifeGameFLTK.ini
lgfiles/: 2gliders.lg  2light _space_ships.lg  3gliders.lg  3gliders2.lg  QueenBeeShuttle.lg  R-pentomino.lg  clock.lg  glider_gun.lg  light _space_ship.lg  sample.lg
